[B][COLOR=FF56ADDA]v4.5.7[/COLOR][/B]
• Changed: Home menu animations (smoooooooth as hell)

[B][COLOR=FF56ADDA]v4.5.6[/COLOR][/B]
• Added: Option to open the widget content in the library view by clicking on the headline of the widgets (except custom and playlists widgets)
• Changed: No more forced capitalized widget headlines
• Changed: Changed 16:9 Now Playing thumb to a square layout (width reasons)
• Changed: Visiblity and animations of the Now Playing covers
• Fixed: Now Playing scrolling labels
• Fixed: Widget visible/hidden animations
• Fixed: Square widget position

[B][COLOR=FF56ADDA]v4.5.5[/COLOR][/B]
• Changed: Increased widget size

[B][COLOR=FF56ADDA]v4.5.4[/COLOR][/B]
• Added: New custom widget path selection method (based on the lastest Skinshortcuts GitHub release)
• Added: Valid source check for custom widget path
• Added: Option to change the right bottom custom widget label
• Changed: Some conditions, which can cause overlappings
• Merged: Translations

[B][COLOR=FF56ADDA]v4.5.3[/COLOR][/B]
• Changed: Increased the logo size in NetFilx
• Changed: Improved the movement controls for the menu editing dialog

[B][COLOR=FF56ADDA]v4.5.2[/COLOR][/B]
• Fixed: Sideblade menu access issues in Shelf/NetFilx, if the view type "Slide" is disabled
• Fixed: Some more NetFilx issues (background, onup-conditions)
• Fixed: Not working Kios Mode in NetFilx/Shelf
• Changed: Some minor layout adjustments of the recently indroduced Banner Art view
• Changed: Adjusted the look and feel of the Banner List view
• Fixed: Typo and missing views in the Show IDs dialog

[B][COLOR=FF56ADDA]v4.5.1[/COLOR][/B]
• Added: New viewtype "Banner Art" for Movies/TV Shows/Seasons
• Fixed: Addon.xml requirements for newest skinshortcuts script

[B][COLOR=FF56ADDA]v4.5.0[/COLOR][/B]
• Fixed: Fixed viewtype settings for YouTube plugin (I hope so)
• Fixed: "Show IDs" dialog

[B][COLOR=FF56ADDA]v4.4.9a[/COLOR][/B]