@@ -883,7 +883,7 @@
 			<control type="wraplist" id="59">
 				<left>47</left>
 				<top>420</top>
-				<width>2495</width>
+				<width>1280</width>
 				<height>800</height>
 				<onleft>59</onleft>
 				<onright>59</onright>
